--- a/Style.css
+++ b/Style.css
@@ -1,15 +1,15 @@
 body{
     margin: 0;
     padding: 0;
+    font-family: 'Inter', sans-serif;
     
 }
 .section1{
     display: flex;
-    font-family: 'Inter', sans-serif;
 }
 .diet,.img1{
     width: 50%;
-    height: 680px;
+    height: 700px;
 
 }
 .h2pa{
@@ -26,13 +26,13 @@ body{
     color: rgb(255, 81, 0);
 }
 .h2pa p{
-    font-size: 22px;
+    font-size: 20px;
     color: #838383;
 }
 .h2pa a{
     background-image: linear-gradient(rgba(177, 50, 50, 0.7),rgba(108, 163, 136, 0.7));
     text-decoration: none;
-    padding: 25px 40px;
+    padding: 22px 37px;
     font-size: 20px;
     font-weight: 600;
     border-radius: 50px;
@@ -40,11 +40,112 @@ body{
 }
 .h2pa a:hover{
     color: aliceblue;
-    background-color: rgb(0, 255, 221);
+    background-image: linear-gradient(rgba(87, 157, 223, 0.952),rgba(0, 247, 95, 0.582));
 }
 
 .img1 img{
-    width: 113%;
+    width: 600px;
     margin-top: 15%;
-    margin-left: -90px;
+    margin-left: 6%;
+}
+
+.section2{
+    width: 100%;
+    height: 570px;
+    background-image: url(images/7.png);
+    margin-top: 110px;
+    margin-bottom: 65px;
+    display: flex;
+}
+
+.img2,.apc{
+        width: 50%;
+}
+.img2 img{
+    width: 430px;
+    margin-left: 135px;
+}
+.apcm{
+    width: 75%;
+    height: 60%;
+    margin-top: 130px;
+    margin-left: 40px;
+}
+.apcm h2{
+    font-size: 35px;
+    color: #707070;
+}
+.apcm p{
+    line-height: 30px;
+    font-size:18px ;
+}
+.apcm a{
+    background-image: linear-gradient(rgba(201, 187, 2, 0.952),rgba(247, 0, 214, 0.829));
+    text-decoration: none;
+    padding: 22px 37px;
+    font-size: 20px;
+    font-weight: 600;
+    border-radius: 50px;
+    color: rgb(0, 0, 0);
+}
+.A{
+    width: 40%;
+    margin-top: 100px;
+}
+.apcm a:hover{
+    color: rgb(255, 255, 255);
+    background-image: linear-gradient(rgba(2, 105, 201, 0.952),rgba(54, 189, 182, 0.829));
+}
+
+
+
+.section3{
+    width: 100%;
+    height: 700px;
+}
+.h2p{
+    width: 50%;
+    height: 22%;
+    margin:  auto;
+    margin-bottom: 1%;
+}
+.h2p h2{
+    font-size: 30px;
+    text-align: center;
+}
+.h2p p{
+    font-size: 18px;
+    text-align: center;
+}
+.main{
+    display: flex;
+    width: 90%;
+    height: 460px;
+    margin: 0 auto; 
+}
+.sub1,.sub2,.sub3{
+    width: 30%;
+    height: 100%;
+    margin-left: 2%;
+    margin-right: 2%;
+    box-shadow: 10px 10px 40px grey;
+    border-radius: 25px;
+}
+.pic1,.pic2,.pic3{
+    width: 90%;
+    margin: 5% ;
+}
+.sub1 img,.sub2 img,.sub3 img{
+    width: 100%;
+    border-radius: 10px;
+    height: 220px;
+}
+.hp1,.hp2,.hp3{
+    margin-left: 5%;
+}
+.hp1 h2,.hp2 h2,.hp3 h2{
+    font-size: 30px;
+}
+.hp1 p,.hp2 p,.hp3 p{
+    font-size: 21px;
 }
