--- a/Style.css
+++ b/Style.css
@@ -149,3 +149,27 @@ body{
 .hp1 p,.hp2 p,.hp3 p{
     font-size: 21px;
 }
+.full{
+    width: 100%;
+    height: 380px;
+}
+.box{
+    width: 85%;
+    height: 60%;
+    box-shadow: 0px 0px 1px grey;
+    margin: 60px auto;
+    display: flex;
+    
+}
+.ys,.if,.ds{
+    width: 34%;
+    height: 75%;
+    text-align: center;
+    margin-top: 3%;
+}
+.ys h1,.if h1,.ds h1{
+    font-family: 'Lato', sans-serif;
+    font-size: 35px;
+}
+
+
