--- a/Style.css
+++ b/Style.css
@@ -152,7 +152,7 @@ body{
 }
 .full{
     width: 100%;
-    height: 380px;
+    height: 315px;
 }
 .box{
     width: 85%;
@@ -166,7 +166,7 @@ body{
     width: 34%;
     height: 75%;
     text-align: center;
-    margin-top: 3%;
+    margin-top: 10px;
 }
 .ys h1,.if h1,.ds h1{
     font-family: 'Lato', sans-serif;
@@ -174,3 +174,20 @@ body{
 }
 
 
+.footer{
+    width: 100%;
+    height: 240px;
+    text-align: center;
+    background-color: #0B0E18;
+    padding-top: 10px;
+}
+.footer h1{
+    font-size: 35px;
+    color: #5B5B5B;
+}
+.footer span{
+    color: #FA7E42;
+}
+.footer p{
+    color: #fff;
+}
